Time: 9 ms (48.58%), Space: 46.7 MB (54.42%) - LeetHub