@@ -1,23 +1,18 @@
 class Solution {
     public int[][] merge(int[][] intervals) {
-        // Step 1: Sort intervals based on start time
         Arrays.sort(intervals, (a, b) -> Integer.compare(a[0], b[0]));
-
-        List<int[]> merged = new ArrayList<>();
-
-        // Step 2: Merge overlapping intervals
+        LinkedList<int[]> merged = new LinkedList<>();
         for (int[] interval : intervals) {
-            if (merged.isEmpty() || merged.get(merged.size() - 1)[1] < interval[0]) {
+            if (merged.isEmpty() || merged.getLast()[1] < interval[0]) {
                 merged.add(interval);
-            } else {
-                // Merge with the last interval
-                merged.get(merged.size() - 1)[1] = Math.max(
-                    merged.get(merged.size() - 1)[1], interval[1]
+            }
+            else {
+                merged.getLast()[1] = Math.max(
+                    merged.getLast()[1],
+                    interval[1]
                 );
             }
         }
-
-        // Step 3: Convert list to array
         return merged.toArray(new int[merged.size()][]);
     }
 }
